--- a/public/css/home.css
+++ b/public/css/home.css
@@ -62,3 +62,31 @@
     background-size: 200% 200%;
     animation: gradient-animation 5s ease infinite;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+}
+
+.custom-shape-divider-top-1731254366 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1731254366 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 134px;
+}
+
+.custom-shape-divider-top-1731254366 .shape-fill {
+    fill: #FFFFFF;
+}
